@@ -354,6 +354,9 @@ try {
             elseif ("$containerOsVersion".StartsWith('10.0.19044.')) {
                 $containerOs = "21H2"
             }
+            elseif ("$containerOsVersion".StartsWith('10.0.19045.')) {
+                $containerOs = "22H2"
+            }
             elseif ("$containerOsVersion".StartsWith('10.0.20348.')) {
                 $containerOs = "ltsc2022"
             }
@@ -386,15 +389,9 @@ try {
                     }
                 }
             }
-            elseif ("$hostOsVersion".StartsWith('10.0.19043.') -and "$containerOsVersion".StartsWith("10.0.19041.")) {
+            elseif (("$hostOsVersion".StartsWith('10.0.19043.') -or "$hostOsVersion".StartsWith('10.0.19044.') -or "$hostOsVersion".StartsWith('10.0.19045.')) -and "$containerOsVersion".StartsWith("10.0.19041.")) {
                 if ($isolation -eq "") {
-                    Write-Host -ForegroundColor Yellow "WARNING: Host OS is 21H1 and Container OS is 2004, defaulting to process isolation. If you experience problems, add -isolation hyperv."
-                    $isolation = "process"
-                }
-            }
-            elseif ("$hostOsVersion".StartsWith('10.0.19044.') -and "$containerOsVersion".StartsWith("10.0.19041.")) {
-                if ($isolation -eq "") {
-                    Write-Host -ForegroundColor Yellow "WARNING: Host OS is 21H2 and Container OS is 2004, defaulting to process isolation. If you experience problems, add -isolation hyperv."
+                    Write-Host -ForegroundColor Yellow "WARNING: Host OS is Windows 10 21H1 or newer and Container OS is 2004, defaulting to process isolation. If you experience problems, add -isolation hyperv."
                     $isolation = "process"
                 }
             }
